made form...need to debug spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,43 @@ p.promoBlurb{
 }
 
 .contact{
-  background-image: url(../resources/phone_cover.png);
-    background-size: cover;
+  height: 100vh;
+  width: auto;
+  background-image: url(../resources/pgh.jpg);
+  background-size: cover;
 
+}
+
+
+.overlay{
+  height:100%;
+  width: auto;
+    background-color: rgba(0,0,0,.5)
+
+}
+.contact h1{
+  letter-spacing: .1em;
+}
+
+form{
+  border-style: solid;
+  padding-left:4em;
+  padding-right: 4em;
+  padding-top: 1em;
+}
+
+form label{
+  font-size: 18pt;
+  color: white;
+}
+textarea{
+
+  color: white;
+  height: auto;
+  margin-bottom: 1em;
+}
+
+input[type=submit]{
+  color:white;
+  margin-top: 7px;
 }
